kubernetes/application/backend-deployment.yaml
# backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: memory-game
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "3001"
    spec:
      containers:
        - name: backend
          image: appacr94.azurecr.io/memory-game-backend:latest
          imagePullPolicy: Always 
          ports:
            - containerPort: 3001
              name: http
          readinessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
---
# backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: memory-game
spec:
  ports:
    - port: 80
      targetPort: 3001
      name: http
  selector:
    app: backend
  type: ClusterIP
